--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,174 @@
 /* font style */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: "Poppins", sans-serif;
 }
+
+/* header section style start */
+header{
+    background-color: #9376e0;
+}
+.header-section{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+}
+.nav-title{
+    display: flex;
+    align-items: center;
+    width: 50%;
+    object-fit: cover;
+
+}
+.nav-title img{
+    width: 90px;
+}
+.nav-title p{
+    font-size: 25px;
+} 
+.special{
+    color: #e893cf;
+    font-weight: 800;
+}
+.nav-items{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-items a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+.login-btn{
+    padding: 18px 27px;
+    border-radius: 5px;
+    background: linear-gradient(to top, #e459cd, #693ce6 );
+    font-size: 20px;
+    font-weight: 600;
+    border: 0;
+    color: black;
+}
+/* header section style end */
+
+/* banner section style start */
+.banner-section{
+    max-width: 1200px;
+    margin: 25px auto;
+    padding: 20px;
+    background-color: #e6e9eb;
+    border-radius: 10px;
+    min-height: 400px;
+    display: flex;
+}
+.banner-text-container{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+.banner-img-container{
+    width: 50%;
+    position: relative;
+}
+.banner-img-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.banner-heading{
+    background: linear-gradient(to top, #e893cf, #9376e0 );
+    background-clip: text;
+    color: transparent;
+    font-size: 50px;
+}
+.banner-description{
+    font-family: "Kaushan Script", cursive;
+    font-size: 40px;
+}
+.banner-icons{
+    display: flex;
+    gap: 8px;
+}
+.fa-brands{
+    font-size: 45px;
+}
+.banner-primary-btn{
+    display: flex;
+    gap: 10px;
+}
+.banner-btn{
+    border: 0;
+    padding: 15px 25px;
+    color: black;
+    font-weight: 600;
+    background: linear-gradient(to top, #f34bd7, #825bec );
+    background-color: transparent;
+    border-radius: 5px;
+}
+.banner-discount{
+    width: 90px;
+    height: 90px;
+    background-color: red;
+    border: 5px solid white;
+    color: white;
+    font-weight: 800;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 70%;
+    left: 62%;
+    transform: rotate(-30deg);
+}
+/* banner section style end */
+
+/* product section start here */
+.product-section{
+    max-width: 1200px;
+    margin: 0 auto;
+    border: 2px solid yellow;
+}
+/* .product-container{
+    min-width: 400px;
+    border: 2px solid red;
+} */
+.single-product{
+    width: 35%;
+    border: 2px solid blue;
+    padding: 20px;
+}
+.single-product img{
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    object-fit: cover;
+}
+.product-title-icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.product-btn{
+    border: 0;
+    padding: 15px 25px;
+    color: black;
+    font-weight: 600;
+    background: linear-gradient(to top, #f34bd7, #825bec );
+    background-color: transparent;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+/* product section ends here */
